--- a/Fridge/templates/Fridge/base.html
+++ b/Fridge/templates/Fridge/base.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&effect=brick-sign">
+
 <style>
 .w3-lobster {
   font-family: "Lobster", Sans-serif;
@@ -53,11 +54,14 @@ body {
       <span class="navbar-toggler-icon"></span>
   </button>
 
-<a class="navbar-brand" href="home.html"><div class="w3-container w3-lobster font-effect-brick-sign">
-    <p class="w3-xxxlarge">MyFridge</p>
-    </div></a>
+    <a class="navbar-brand" href="home.html">
+        <div class="w3-container w3-lobster font-effect-brick-sign">
+            <p class="w3-xxxlarge">MyFridge</p>
+        </div>
+    </a>
 
-    <button class="btn btn-success btn-lg" type="button">Login</button>
+    <a href="signin.html" class="btn btn-success btn-lg" role="button">Login</a>
+
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -103,7 +107,7 @@ body {
 
 <div id="footer" name="footer">
 
-<footer class="footer">
+    <footer class="footer">
       <div class="container w3-container w3-lobster font-effect-brick-sign">
         <span class="text-muted">PJWSTK Gr. 10 Pro Project</span>
       </div>
