--- a/Fridge/templates/Fridge/home.html
+++ b/Fridge/templates/Fridge/home.html
@@ -4,11 +4,27 @@
 
 {% block content %}
 
-    <main role="main" class="container">
+
 
       <h1 class="mt-5">Main Page</h1>
+    <p>Content</p><br>
+    <p>Content</p><br>
+    <p>Content</p><br>
+    <p>Content</p><br>
+    <p>Content</p><br>
+    <p>Content</p><br>
+    <p>Content</p><br>
+    <p>Content</p><br>
+    <p>Content</p><br>
+    <p>Content</p><br>
+    <p>Content</p><br>
+    <p>Content</p><br>
+    <p>Content</p><br>
+    <p>Content</p><br>
+    <p>Content</p><br>
 
 
-    </main>
+
+
 
 {% endblock content %}
