--- a/Fridge/templates/Fridge/base.html
+++ b/Fridge/templates/Fridge/base.html
@@ -15,32 +15,80 @@
   font-family: "Lobster", Sans-serif;
 }
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
+
 body {
     margin-left: 100px;
     margin-right: 100px;
-  margin-bottom: 60px; /* Margin bottom by footer height */
+    margin-bottom: 60px; /* Margin bottom by footer height */
     background-image: url("https://online.ahu.edu/wp-content/uploads/2019/03/Healthy-Food-Doesnt-Have-To-Be-Expensive.jpg");
-
+    display: grid;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     margin-left: -100px;
-  height: 30px; /* Set the fixed height of the footer here */
-  line-height: 30px; /* Vertically center the text there */
-  background-color:   #E0E0E0;
+    height: 30px; /* Set the fixed height of the footer here */
+    line-height: 30px; /* Vertically center the text there */
+    background-color:   #E0E0E0;
     letter-spacing: 2px;
 }
 
 .header {
-  border-radius: 20px;
-  border: 10px solid #73AD21;
-  padding: 10px;
+    border-radius: 20px;
+    border: 10px solid #73AD21;
+    padding: 10px;
     width: 100%;
+    margin-bottom: 50px;
+}
+
+* {
+  box-model: border-box;
+}
+body {
+  font-family: sans-serif;
+}
+#wrapper {
+    width: 100%;
+    text-align: center;
+}
+body .container {
+  display: inline-block;
+  width: 50%;
+  padding: 10px;
+}
+h2 {
+  margin: 5px 0;
+  color: #666;
+}
+table {
+
+  width: 100%;
+  border-collapse: collapse;
+}
+td {
+  color: #333;
+  padding: 10px;
+  border: 1px solid #bbb;
+  position: relative;
+}
+td button {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  background: #fff;
+  font-size: 12px;
+}
+td button:hover {
+  outline: none;
+  border-color: #888;
+  cursor: pointer;
 }
 
 </style>
@@ -49,6 +97,52 @@ body {
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
+<script>
+
+window.onload = function () {
+  var data = {
+    Products: ['vanilla', 'pistachio', 'squirrels', 'squash', 'mountains'],
+    Fridge: ['chocolate', 'trucks', 'football', 'hard candy', 'valleys']
+  };
+  var tables = {};
+  var moveMe = function () {
+    this.table = tables[this.table === tables.Fridge ? 'Products' : 'Fridge'];
+    this.table.tbody.appendChild(this.tr);
+  };
+  Object.keys(data).forEach(function (key) {
+    var container = document.createElement('div'),
+        table = tables[key] = document.createElement('table'),
+        tbody = table.tbody = document.createElement('tbody');
+    if(key == 'Products'){
+        container.setAttribute('id','products');
+    }
+    else {
+        container.setAttribute('id','fridge')
+    }
+    data[key].forEach(function (item) {
+      var tr = document.createElement('tr'),
+          td = document.createElement('td');
+      td.innerHTML = item;
+      tr.appendChild(td);
+      tbody.appendChild(tr);
+      var button = document.createElement('button');
+          button.innerHTML = 'Move';
+      button.onclick = moveMe;
+      button.table = table;
+      button.tr = tr;
+      td.appendChild(button);
+    });
+    table.appendChild(tbody);
+    var header = document.createElement('h2');
+    header.innerHTML = key;
+    container.appendChild(header);
+    container.appendChild(table);
+    container.className = 'container';
+    document.getElementById('wrapper').appendChild(container);
+  });
+};
+
+</script>
 
 
     <title>{% block title %}Title-to-replace{% endblock title %}</title>
@@ -59,7 +153,7 @@ body {
 
     <header class="header">
 
-<nav class="navbar navbar-light" style="background-color: #00cc00">
+<nav class="navbar navbar-light" style="background-image: linear-gradient(to bottom right, #006400, #7FFF00);">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -107,13 +201,11 @@ body {
 </div>
 
 
-<div style="background-color: white; opacity:0.79;" id="content" name="content">
+<div style="background-color: white; opacity:0.85; padding: 25px;" id="content" name="content">
 
-<main role="main" class="container">
     {% block content %}
         Content-to-replace
     {% endblock content %}
-</main>
 
 </div>
 
@@ -121,7 +213,7 @@ body {
 <div id="footer" name="footer">
 
     <footer class="footer">
-      <div class="container w3-container w3-lobster font-effect-brick-sign">
+      <div class="w3-container w3-lobster font-effect-brick-sign">
         <span class="text-muted">PJWSTK Gr. 10 Pro Project</span>
       </div>
     </footer>
