--- a/Fridge/templates/Fridge/home.html
+++ b/Fridge/templates/Fridge/home.html
@@ -5,25 +5,27 @@
 {% block content %}
 
     <h1 class="mt-5">Main Page</h1>
-    {% if products %}
-        {% for product in products %}
-            <p>{{ product.name }}</p><br>
-        {% endfor %}
-    {% endif %}
+{#    {% if products %}#}
+{#        {% for product in products %}#}
+{#            <p>{{ product.name }}</p><br>#}
+{#        {% endfor %}#}
+{#    {% endif %}#}
 
     <p>Content</p><br>
     <p>Content</p><br>
     <p>Content</p><br>
     <p>Content</p><br>
     <p>Content</p><br>
-    <p>Content</p><br>
-    <p>Content</p><br>
-    <p>Content</p><br>
-    <p>Content</p><br>
-    <p>Content</p><br>
-    <p>Content</p><br>
-    <p>Content</p><br>
-    <p>Content</p><br>
-    <p>Content</p><br>
+
+    <main role="main" id="wrapper">
+    </main>
+
+
+    <h1 class="mt-5">Recipies :</h1>
+    <p>Recipie</p>
+    <p>Recipie</p>
+    <p>Recipie</p>
+    <p>Recipie</p>
+    <p>Recipie</p>
 
 {% endblock content %}
