--- a/Fridge/templates/Fridge/home.html
+++ b/Fridge/templates/Fridge/home.html
@@ -1,31 +1,74 @@
-{% extends 'Fridge/base.html' %}
-
-{% block title %} Home Page {% endblock title %}
+{% extends "fridge/base.html" %}
 
 {% block content %}
+<script>
+    window.onload = function () {
+        var data = {
+            Products: ['vanilla', 'pistachio', 'squirrels', 'squash', 'mountains'],
+            Fridge: ['chocolate', 'trucks', 'football', 'hard candy', 'valleys']
+        };
+        var tables = {};
+        var moveMe = function () {
+            this.table = tables[this.table === tables.Fridge ? 'Products' : 'Fridge'];
+            this.table.tbody.appendChild(this.tr);
+        };
+        Object.keys(data).forEach(function (key) {
+            var container = document.createElement('div'),
+                table = tables[key] = document.createElement('table'),
+                tbody = table.tbody = document.createElement('tbody');
+            if (key == 'Products') {
+                container.setAttribute('id', 'products');
+            }
+            else {
+                container.setAttribute('id', 'fridge')
+            }
+            data[key].forEach(function (item) {
+                var tr = document.createElement('tr'),
+                    td = document.createElement('td');
+                td.innerHTML = item;
+                tr.appendChild(td);
+                tbody.appendChild(tr);
+                var button = document.createElement('button');
+                button.innerHTML = 'Move';
+                button.onclick = moveMe;
+                button.table = table;
+                button.tr = tr;
+                td.appendChild(button);
+            });
+            table.appendChild(tbody);
+            var header = document.createElement('h2');
+            header.innerHTML = key;
+            container.appendChild(header);
+            container.appendChild(table);
+            container.className = 'container';
+            document.getElementById('wrapper').appendChild(container);
+        });
+    };
+</script>
 
-    <h1 class="mt-5">Main Page</h1>
+
+<h1 class="mt-5">Main Page</h1>
 {#    {% if products %}#}
 {#        {% for product in products %}#}
 {#            <p>{{ product.name }}</p><br>#}
 {#        {% endfor %}#}
 {#    {% endif %}#}
 
-    <p>Content</p><br>
-    <p>Content</p><br>
-    <p>Content</p><br>
-    <p>Content</p><br>
-    <p>Content</p><br>
+<p>Content</p><br>
+<p>Content</p><br>
+<p>Content</p><br>
+<p>Content</p><br>
+<p>Content</p><br>
 
-    <main role="main" id="wrapper">
-    </main>
+<main role="main" id="wrapper">
+</main>
 
 
-    <h1 class="mt-5">Recipies :</h1>
-    <p>Recipie</p>
-    <p>Recipie</p>
-    <p>Recipie</p>
-    <p>Recipie</p>
-    <p>Recipie</p>
+<h1 class="mt-5">Recipies :</h1>
+<p>Recipie</p>
+<p>Recipie</p>
+<p>Recipie</p>
+<p>Recipie</p>
+<p>Recipie</p>
 
 {% endblock content %}
