Wypelniona baza + API

--- a/fridge/templates/fridge/home.html
+++ b/fridge/templates/fridge/home.html
@@ -1,7 +1,10 @@
 {% extends "fridge/base.html" %}
 
 {% block content %}
+{#    <input type="hidden" value="">#}
+
 <script>
+
     window.onload = function () {
         var data = {
             Products: ['vanilla', 'pistachio', 'squirrels', 'squash', 'mountains'],
@@ -70,5 +73,6 @@
 <p>Recipie</p>
 <p>Recipie</p>
 <p>Recipie</p>
+
 
 {% endblock content %}
