--- a/fridge/templates/fridge/base.html
+++ b/fridge/templates/fridge/base.html
@@ -100,6 +100,7 @@ td button:hover {
 }
 
 table {
+    background:rgba(255,255,255,1);
     border: solid 1px;
     width: 100%;
     display:block;
@@ -115,6 +116,23 @@ tbody {
     width: 100%;
     overflow: auto;
 }
+
+article {
+    background:rgba(255,255,255, 1);
+    border: 1px solid black;
+    width: 25%;
+    text-align: center;
+    margin: 10px;
+    padding-bottom: 15px;
+}
+
+#recipies_wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, 24%);
+    grid-column-gap: 1%;
+}
+
+
 
 #recipySearch  {
   border: 2px solid #ccc;
@@ -137,164 +155,6 @@ select {
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
 <script>
-
-    function filterTable() {
-  let dropdown, table, items, cells, product, filter;
-  dropdown = document.getElementById("productDropdown");
-  table = document.getElementById("Productskey");
-  items = table.getElementsByTagName("td");
-  filter = dropdown.value;
-  for (let item of items) {
-    cells = item.getElementsByTagName("p");
-    product = cells[1] || null;
-      console.log(product)
-
-    if (filter === "All" || !product || (filter === product.textContent)) {
-      item.style.display = "";
-    }
-    else {
-      item.style.display = "none";
-    }
-  }
-}
-
-
-    function productsSearchByName() {
-  var input, filter, table, td, tds, i, txtValue;
-  input = document.getElementById("myInput");
-  filter = input.value.toUpperCase();
-  table = document.getElementById("Productskey");
-  td = table.getElementsByTagName("td");
-  for (i = 0; i < td.length; i++) {
-    tds = td[i].getElementsByTagName("p")[0];
-    if (tds) {
-      txtValue = tds.textContent || tds.innerText;
-      if (txtValue.toUpperCase().indexOf(filter) > -1) {
-        td[i].style.display = "";
-      } else {
-        td[i].style.display = "none";
-      }
-    }
-  }
-}
-
-function recipySearch() {
-
-    var table, td, tds, i, txtValue;
-  table = document.getElementById("Fridgekey");
-  td = table.getElementsByTagName("td");
-  var result = [];
-  for (i = 0; i < td.length; i++) {
-    tds = td[i].getElementsByTagName("p")[0];
-
-    if (tds) {
-      txtValue = tds.textContent || tds.innerText;
-      result[i]=txtValue;
-    }
-
-    }
-  console.log(result);
-
-}
-
-
-var img = "https://blog.rahulbhutani.com/wp-content/uploads/2020/05/Screenshot-2018-12-16-at-21.06.29.png"
-window.onload = function () {
-  var data = {
-    Products: [{name:'vanilla',type:'spice',image_name:img},{name:'pistachio',type:'fruit',image_name:img},{name:'squirrels',type:'vegetable',image_name:img},{name:'squash',type:'spice',image_name:img},{name:'mountains',type:'spice',image_name:img}],
-    Fridge: [{name:'chocolate',type:'spice',image_name:img},{name:'trucks',type:'spice',image_name:img},{name:'football',type:'spice',image_name:img},{name:'hard candy',type:'spice',image_name:img},{name:'valleys',type:'spice',image_name:img}]
-  };
-
-var byName = data.Products.slice(0);
-byName.sort(function(a,b) {
-    var x = a.name.toLowerCase();
-    var y = b.name.toLowerCase();
-    return x < y ? -1 : x > y ? 1 : 0;
-});
-
-  data.Products = byName;
-
-  var tables = {};
-
-  var moveMe = function () {
-    this.table = tables[this.table === tables.Fridge ? 'Products' : 'Fridge'];
-    this.table.tbody.appendChild(this.td);
-  };
-
-  Object.keys(data).forEach(function (key) {
-    var container = document.createElement('div'),
-        table = tables[key] = document.createElement('table'),
-        tbody = table.tbody = document.createElement('tbody');
-    if(key == 'Products'){
-        container.setAttribute('id','products');
-        var input = document.createElement("input");
-        input.setAttribute('type','text')
-        input.setAttribute('id','myInput')
-        input.setAttribute('onkeyup','productsSearchByName()')
-        input.setAttribute('placeholder','Search by names..')
-        input.setAttribute('title','Type in a product name')
-        container.append(input);
-        var select = document.createElement("select");
-        select.setAttribute("id", "productDropdown");
-        select.setAttribute('oninput',"filterTable()")
-        container.append(select);
-
-        var opt0 = document.createElement("option");
-            opt0.setAttribute("value", "All");
-            var nod0 = document.createTextNode("All");
-            opt0.appendChild(nod0);
-            select.appendChild(opt0);
-        var opt = document.createElement("option");
-            opt.setAttribute("value", "fruit");
-            var nod = document.createTextNode("fruit");
-            opt.appendChild(nod);
-            select.appendChild(opt);
-        var opt2 = document.createElement("option");
-            opt2.setAttribute("value", "spice");
-            var nod2 = document.createTextNode("spice");
-            opt2.appendChild(nod2);
-            select.appendChild(opt2);
-        var opt3 = document.createElement("option");
-            opt3.setAttribute("value", "vegetable");
-            var nod3 = document.createTextNode("vegetable");
-            opt3.appendChild(nod3);
-            select.appendChild(opt3);
-
-    }
-    else {
-        container.setAttribute('id','fridge')
-
-    }
-    data[key].forEach(function (item) {
-      var //tr = document.createElement('tr'),
-          td = document.createElement('td');
-      td.innerHTML = '<img src='+ item.image_name +' width="140" height="140"/><p>'+ item.name + '</p><br><p>'+ item.type +'</p>';
-      //tr.appendChild(td);
-      tbody.appendChild(td);
-      var button = document.createElement('button');
-          button.innerHTML = 'Move';
-      button.onclick = moveMe;
-      button.table = table;
-      button.td = td;
-      td.appendChild(button);
-    });
-    table.appendChild(tbody);
-    var header = document.createElement('h2');
-    header.innerHTML = key;
-    container.appendChild(header);
-    table.setAttribute('id',key+"key");
-    container.appendChild(table);
-    container.className = 'container';
-    document.getElementById('wrapper').appendChild(container);
-
-  });
-  var search = document.getElementById('wrapper');
-    var searchButton = document.createElement("button");
-    searchButton.setAttribute('onClick','recipySearch()');
-    searchButton.setAttribute('id', "recipySearch")
-    searchButton.innerHTML = 'Search';
-    search.appendChild(searchButton);
-};
 
 </script>
 
@@ -326,11 +186,11 @@ byName.sort(function(a,b) {
     <ul class="navbar-nav mr-auto">
         <div class="dropdown-divider"></div>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Href 1<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="home.html">Home Page<span class="sr-only">(current)</span></a>
       </li>
         <div class="dropdown-divider"></div>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Href 2</a>
+        <a class="nav-link" href="fridge.html">Frigde Page</a>
       </li>
         <div class="dropdown-divider"></div>
       <li class="nav-item dropdown">
@@ -355,7 +215,7 @@ byName.sort(function(a,b) {
 </div>
 
 
-<div style="background-color: white; opacity:0.85; padding: 25px;" id="content" name="content">
+<div style="background:rgba(255,255,255, 0.9); padding: 25px;" id="content" name="content">
 
     {% block content %}
         Content-to-replace
