laczenie bazy z frontem

--- a/fridge/templates/fridge/recipy.html
+++ b/fridge/templates/fridge/recipy.html
@@ -1,138 +1,9 @@
 {% extends "fridge/base.html" %}
-
+{% load static %}
 {% block content %}
-{#    <input type="hidden" value="">#}
-<style>
+   <script src="{% static 'js/recipy.js' %}" type="text/javascript"></script>
+    <link href="{% static 'css/recipy.css' %}" rel="stylesheet">
 
-main {
-    display: grid;
-}
-
-.item1 {
-    background:rgba(255,255,255, 1);
-    grid-area: header;
-    width: 100%;
-    line-height: 100px;
-    vertical-align: center;
-    text-align: center;
-    border: 1px solid black;
-}
-
-.item2 {
-    background:rgba(255,255,255, 1);
-    grid-area: menu;
-    border: 1px solid black;
-}
-
-.item3 {
-    background:rgba(255,255,255, 1);
-    grid-area: image;
-    justify-content: center;
-    border: 1px solid black;
-}
-
-.item4 {
-    background:rgba(255,255,255, 1);
-    grid-area: right;
-    padding: 20px;
-    width: 100%;
-    border: 1px solid black;
-}
-
-#wrapper {
-  display: grid;
-  grid-template-areas:
-    'image image header header header header header'
-    'image image right right right right right'
-    'menu menu right right right right right'
-    'menu menu right right right right right';
-  grid-gap: 10px;
-  padding: 10px;
-}
-
-#wrapper {
-
-    border: 3px solid black;
-    padding: 10px;
-    margin: 10px;
-}
-
-#ingridients {
-    border: 1px solid black;
-    width : 300px;
-    text-align: center;
-}
-
-</style>
-
-<script>
-
-window.onload = function () {
-
-    var recipy = {
-        id: 1,
-        name: "Zupa",
-        image_r: img,
-        products: ["vanilla", "chocolate", "pistachio", "hard candy"],
-        short_des: "Krotki opis.",
-        description: "Tutaj bedzie opis."
-    };
-
-    var wrapper = document.getElementById("wrapper"),
-        h2 = document.createElement('h2'),
-        description = document.createElement('p'),
-        img = document.createElement('img');
-
-        h2.setAttribute('class','item1')
-        img.setAttribute('class','item3')
-        description.setAttribute('class','item4')
-
-
-
-        h2.innerHTML = recipy.name;
-        img.setAttribute('src', recipy.image_r);
-        img.setAttribute('height', '500');
-        img.setAttribute('width', '500');
-        description.innerHTML = recipy.description;
-
-        var like = document.createElement('button');
-        like.innerHTML = "Ulubione";
-
-        wrapper.appendChild(img);
-        wrapper.appendChild(h2);
-
-        var div = document.createElement('div');
-        div.setAttribute('id','ingridients');
-        div.setAttribute('class','item2');
-
-        wrapper.appendChild(div);
-
-        var h2 = document.createElement('h2');
-        h2.innerHTML = "Składniki";
-
-        var target = document.getElementById("ingridients");
-            target.appendChild(h2);
-
-        recipy.products.forEach(function (item) {
-            var product = document.createElement('p');
-            product.innerHTML = item;
-
-            target.appendChild(product);
-
-        });
-
-        wrapper.appendChild(description);
-
-}
-
-
-function close_window() {
-  if (confirm("Close Window?")) {
-    close();
-  }
-}
-
-</script>
 
     <a href="#" onclick="close_window();return false;" class="btn btn-primary">Go to Home</a>
 
