--- a/fridge/templates/fridge/fridge.html
+++ b/fridge/templates/fridge/fridge.html
@@ -7,8 +7,11 @@
 <h1 class="mt-5">Fridge Page</h1>
 
     <a href="home.html" class="btn btn-primary">Go to Home</a>
+
 <main role="main" id="wrapper">
 </main>
+
+    <p id="cid" hidden> {{ csrf_token }} </p>
 
 
 {% endblock content %}
