--- a/accounts/templates/accounts/logout.html
+++ b/accounts/templates/accounts/logout.html
@@ -1,5 +1,5 @@
 {% extends "fridge/base.html" %}
 
 {% block content %}
-    <h1>Logout</h1>
+    <h1>You are now logged out</h1>
 {% endblock content %}
