--- a/fridge/templates/fridge/base.html
+++ b/fridge/templates/fridge/base.html
@@ -1,107 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 {% load static %}
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+  <!-- BOOTSTRAP -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- /BOOTSTRAP -->
 
-    <link href="{% static 'css/base.css' %}" rel="stylesheet">
-<link rel=”stylesheet” href=”{% static 'css/sticky-footer.css' %}”>
-<link rel=”stylesheet” href=”{% static 'css/main.css' %}”>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&effect=brick-sign">
+  <!-- CSS -->
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&effect=brick-sign">  
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  <link rel="stylesheet" href="{% static 'css/footer.css' %}">
 
-<style>
+  <!-- TITLE -->
+  {% if title %}
+  <title>myFridge - {{ title }}</title>
+  {% else %}
+  <title>myFridge</title>
+  {% endif %}
 
-</style>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-
-<script>
-
-</script>
-
-
-    <title>{% block title %}Title-to-replace{% endblock title %}</title>
 </head>
+
 <body>
-
-<div id="header" name="header">
-
-    <header class="header">
-
-<nav class="navbar navbar-light" style="background-image: linear-gradient(to bottom right, #006400, #7FFF00);">
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-  </button>
-
-    <a class="navbar-brand" href="home.html">
-        <div class="w3-container w3-lobster font-effect-brick-sign">
-            <p class="w3-xxxlarge">MyFridge</p>
-        </div>
-    </a>
-
-    <a href="signin.html" class="btn btn-success btn-lg" role="button">Login</a>
+  <!-- BOOTSTRAP -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <!-- /BOOTSTRAP -->
 
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-        <div class="dropdown-divider"></div>
-      <li class="nav-item active">
-        <a class="nav-link" href="home.html">Home Page<span class="sr-only">(current)</span></a>
-      </li>
-        <div class="dropdown-divider"></div>
-      <li class="nav-item active">
-        <a class="nav-link" href="fridge.html">Frigde Page</a>
-      </li>
-        <div class="dropdown-divider"></div>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          FAQ
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" >Action</a>
-          <a class="dropdown-item" >Another action</a>
-          <a class="dropdown-item" >Something else here</a>
-        </div>
-      </li>
-    </ul>
+  <!-- HEADER -->
+  {% include "fridge/header.html" %}
+
+  <div style="background:rgba(255,255,255, 0.9); padding: 25px;" id="content" name="content">
+    <!-- MESSAGES -->
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+      {{ message }}
+    </div>
+    {% endfor %}
+    {% endif %}
+
+    <!-- CONTENT -->
+    <div style="background-color: white; opacity:0.85; padding: 25px;" id="content" name="content">
+      {% block content %}{% endblock %}
+    </div>
   </div>
-</nav>
 
-    </header>
-
-
-
-
-</div>
-
-
-<div style="background:rgba(255,255,255, 0.9); padding: 25px;" id="content" name="content">
-
-    {% block content %}
-        Content-to-replace
-    {% endblock content %}
-
-</div>
-
-
-<div id="footer" name="footer">
-
-    <footer class="footer">
-      <div class="w3-container w3-lobster font-effect-brick-sign">
-        <span class="text-muted">PJWSTK Gr. 10 Pro Project</span>
-      </div>
-    </footer>
-
-</div>
-
-
-
-
+  <!-- FOOTER -->
+  {% include "fridge/footer.html" %}
 
 </body>
+
 </html>
