--- a/fridge/templates/fridge/header.html
+++ b/fridge/templates/fridge/header.html
@@ -10,16 +10,20 @@
                     <p class="w3-xxxlarge">MyFridge</p>
                 </div>
             </a>
-            <a href="/login" class="btn btn-success btn-lg" role="button">Login</a>
+            {% if user.is_authenticated %}
+                <a href="/logout" class="btn btn-success btn-lg" role="button">Logout</a>
+            {% else %}
+                <a href="/login" class="btn btn-success btn-lg" role="button">Login</a>
+            {% endif %}
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <div class="dropdown-divider"></div>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Href 1<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/home.html">Home Page<span class="sr-only">(current)</span></a>
                     </li>
                     <div class="dropdown-divider"></div>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Href 2</a>
+                        <a class="nav-link" href="/fridge.html">Fridge Page</a>
                     </li>
                     <div class="dropdown-divider"></div>
                     <li class="nav-item dropdown">
