--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -10,8 +10,8 @@
                 <legend class="border-bottom mb-4">Login</legend>
                 {{ form|crispy }}
                 <button class="btn btn-outline-info" type="submit">Login</button>
+                <p><a href="/register">Create an account</a></p>
             </fieldset>
-            
         </form>
     </div>
     
