--- a/fridge/templates/fridge/base.html
+++ b/fridge/templates/fridge/base.html
@@ -53,7 +53,7 @@
     {% endif %}
 
     <!-- CONTENT -->
-    <div style="background-color: white; opacity:0.85; padding: 25px;" id="content" name="content">
+    <div style="padding: 25px;" id="content" name="content">
       {% block content %}{% endblock %}
     </div>
   </div>
