--- a/fridge/static/css/base.css
+++ b/fridge/static/css/base.css
@@ -114,7 +114,7 @@ article {
     padding-bottom: 15px;
 }
 
-#recipies_wrapper {
+#recipes_wrapper {
   display: grid;
   grid-template-columns: repeat(4, 24%);
     grid-column-gap: 1%;
@@ -122,7 +122,7 @@ article {
 
 
 
-#recipySearch  {
+#recipeSearch  {
   border: 2px solid #ccc;
   border-radius: 5px;
   background: #fff;
