--- a/fridge/templates/fridge/fridge.html
+++ b/fridge/templates/fridge/fridge.html
@@ -2,16 +2,24 @@
 {% load static %}
 
 {% block content %}
-   <script src="{% static 'js/fridge.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/fridge.js' %}" type="text/javascript"></script>
 
-<h1 class="mt-5">Fridge Page</h1>
+    <h1 class="mt-5">Fridge Page</h1>
 
-    <a href="home.html" class="btn btn-primary">Go to Home</a>
+    <a href="/home" class="btn btn-primary">Go to Home</a>
 
-<main role="main" id="wrapper">
-</main>
+    <main role="main" id="wrapper"></main>
+
+    {{ products_data | json_script:"products_data" }}
+    {{ fridgeproducts_data | json_script:"fridgeproducts_data" }}
+    {{ fridge_data | json_script:"fridge_data" }}
+    <script>
+        const products = JSON.parse(document.getElementById("products_data").textContent);
+        const fridgeproducts = JSON.parse(document.getElementById("fridgeproducts_data").textContent);
+        const fridge_id = JSON.parse(document.getElementById("fridge_data").textContent).id;
+        showProducts(products, fridgeproducts)
+    </script>
 
     <p id="cid" hidden> {{ csrf_token }} </p>
-
 
 {% endblock content %}
