grid recipies fix

--- a/fridge/templates/fridge/recipe.html
+++ b/fridge/templates/fridge/recipe.html
@@ -6,7 +6,9 @@
 
     <link href="{% static 'css/recipe.css' %}" rel="stylesheet">
 
+    <div id="top">
     <a href="#" onclick="close_window();return false;" class="btn btn-primary">Go to Home</a>
+    </div>
 
     <main role="main" id="wrapper"></main>
 
